<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#314EF3"
    android:padding="10dp"
    tools:context=".UserProfileActivity">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/ic_back"
           android:onClick="moveBack"
           android:contentDescription="@string/todo" />
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/ic_edit"
           android:layout_alignParentRight="true"
           android:onClick="editUser"
           android:contentDescription="@string/todo"
           android:layout_alignParentEnd="true" />
   </RelativeLayout>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="5dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="5dp"
              android:layout_marginTop="20dp"
              android:layout_marginStart="5dp">

              <de.hdodenhof.circleimageview.CircleImageView
                  android:id="@+id/profile_pic"
                  android:layout_width="100dp"
                  android:layout_height="100dp"
                  android:src="@drawable/team_one"/>

              <TextView
                  android:id="@+id/tv_fullName"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@id/profile_pic"
                  android:text="@string/fUser"
                  android:textColor="#fff"
                  android:layout_marginLeft="10dp"
                  android:textSize="16sp"
                  android:textStyle="bold"
                  android:layout_toEndOf="@id/profile_pic"
                  android:layout_marginStart="10dp" />

              <TextView
                  android:id="@+id/tv_profession"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@id/profile_pic"
                  android:layout_below="@id/tv_fullName"
                  android:text="@string/pType"
                  android:textColor="#fff"
                  android:layout_marginTop="5dp"
                  android:layout_marginLeft="10dp"
                  android:textSize="16sp"
                  android:textStyle="bold"
                  android:layout_toEndOf="@id/profile_pic"
                  android:layout_marginStart="10dp" />

              <TextView
                  android:id="@+id/tv_followers"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@id/profile_pic"
                  android:layout_below="@id/tv_profession"
                  android:text="@string/follow"
                  android:textColor="#fff"
                  android:layout_marginTop="5dp"
                  android:layout_marginLeft="10dp"
                  android:textSize="14sp"
                  android:textStyle="bold"
                  android:layout_toEndOf="@id/profile_pic"
                  android:layout_marginStart="10dp" />

              <TextView
                  android:id="@+id/tv_following"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@id/profile_pic"
                  android:layout_below="@id/tv_followers"
                  android:text="@string/follower"
                  android:textColor="#fff"
                  android:layout_marginTop="5dp"
                  android:layout_marginLeft="10dp"
                  android:textSize="14sp"
                  android:textStyle="bold"
                  android:layout_marginStart="10dp"
                  android:layout_toEndOf="@id/profile_pic" />

          </RelativeLayout>

          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="2dp"
              android:background="#fff"
              android:layout_marginBottom="10dp"/>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/about"
              android:textSize="14sp"
              android:textColor="#fff"/>
          <TextView
              android:id="@+id/tv_about"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/abtUser"
              android:textSize="16sp"
              android:textColor="#fff"/>

          <TextView
              android:layout_marginTop="10dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/endorse"
              android:textSize="14sp"
              android:textColor="#fff"/>
          <TextView
              android:id="@+id/tv_endorse"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/endorse1"
              android:textSize="16sp"
              android:textColor="#fff"/>

          <TextView
              android:layout_marginTop="10dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/exp"
              android:textSize="14sp"
              android:textColor="#fff"/>
          <TextView
              android:id="@+id/tv_e"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/exp1"
              android:textSize="16sp"
              android:textColor="#fff"/>

          <TextView
              android:layout_marginTop="15dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/contact"
              android:textSize="14sp"
              android:textColor="#fff"/>

          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
              <ImageView
                  android:id="@+id/icon"
                  android:layout_width="30dp"
                  android:layout_height="30dp"
                  android:layout_margin="10dp"
                  android:src="@drawable/apple_touch_icon"
                  android:contentDescription="@string/todo" />
              <TextView
                  android:id="@+id/tv_profile_link_tag"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@id/icon"
                  android:layout_marginLeft="10dp"
                  android:text="@string/urProfile"
                  android:textStyle="bold"
                  android:textSize="16sp"
                  android:textColor="#fff"
                  android:layout_marginStart="10dp"
                  android:layout_toEndOf="@id/icon" />
              <TextView
                  android:id="@+id/tv_profile_link"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@id/icon"
                  android:layout_marginLeft="10dp"
                  android:layout_below="@id/tv_profile_link_tag"
                  android:text="@string/profile1"
                  android:textSize="14sp"
                  android:textColor="#fff"
                  android:layout_toEndOf="@id/icon"
                  android:layout_marginStart="10dp" />

              <RelativeLayout
                  android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="#fff"
                  android:layout_marginLeft="57dp"
                  android:layout_below="@id/tv_profile_link"
                  android:layout_marginStart="57dp" />
          </RelativeLayout>

          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dp">
              <ImageView
                  android:id="@+id/phone_icon"
                  android:layout_width="30dp"
                  android:layout_height="30dp"
                  android:layout_margin="10dp"
                  android:src="@drawable/ic_phone"
                  android:contentDescription="@string/todo" />
              <TextView
                  android:id="@+id/tv_phone_tag"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@id/phone_icon"
                  android:layout_marginLeft="10dp"
                  android:text="@string/phone"
                  android:textStyle="bold"
                  android:textSize="16sp"
                  android:textColor="#fff"
                  android:layout_toEndOf="@id/phone_icon"
                  android:layout_marginStart="10dp" />
              <TextView
                  android:id="@+id/tv_phone_no"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@id/phone_icon"
                  android:layout_marginLeft="10dp"
                  android:layout_below="@id/tv_phone_tag"
                  android:text="@string/profileLink"
                  android:textSize="14sp"
                  android:textColor="#fff"
                  android:layout_marginStart="10dp"
                  android:layout_toEndOf="@id/phone_icon" />

              <RelativeLayout
                  android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="#fff"
                  android:layout_marginLeft="57dp"
                  android:layout_below="@id/tv_phone_no"
                  android:layout_marginStart="57dp" />
          </RelativeLayout>

          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dp">
              <ImageView
                  android:id="@+id/msg_icon"
                  android:layout_width="30dp"
                  android:layout_height="30dp"
                  android:layout_margin="10dp"
                  android:src="@drawable/ic_mail"
                  android:contentDescription="@string/todo" />
              <TextView
                  android:id="@+id/tv_msg_tag"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@id/msg_icon"
                  android:layout_marginLeft="10dp"
                  android:text="@string/email"
                  android:textStyle="bold"
                  android:textSize="16sp"
                  android:textColor="#fff"
                  android:layout_toEndOf="@id/msg_icon"
                  android:layout_marginStart="10dp" />
              <TextView
                  android:id="@+id/tv_email"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@id/msg_icon"
                  android:layout_marginLeft="10dp"
                  android:layout_below="@id/tv_msg_tag"
                  android:text="@string/refLink"
                  android:textSize="14sp"
                  android:textColor="#fff"
                  android:layout_toEndOf="@id/msg_icon"
                  android:layout_marginStart="10dp" />

              <RelativeLayout
                  android:id="@+id/view1"
                  android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="#FFFFFFFF"
                  android:layout_marginLeft="57dp"
                  android:layout_below="@id/tv_email"
                  android:layout_marginStart="57dp" />
          </RelativeLayout>

      </LinearLayout>
  </ScrollView>
</LinearLayout>