<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#314EF3"
    tools:context=".RegistrationActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:onClick="cancelDialog"
        android:layout_gravity="right"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/reg"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fields"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:textColor="#fff"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#fff"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="First name"
                android:textColor="#fff"
                android:layout_marginTop="20dp"
                android:layout_gravity="start"
                android:textSize="14sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="text"
                android:singleLine="true"
                android:background="@drawable/cedittext"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last name"
                android:textColor="#fff"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:textSize="14sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="text"
                android:singleLine="true"
                android:background="@drawable/cedittext"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userType"
                android:textColor="#fff"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:textSize="14sp"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textColor="#fff"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:textSize="14sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/cedittext"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password"
                android:textColor="#fff"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:textSize="14sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:padding="10dp"
                android:background="@drawable/cedittext"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Confirm password"
                android:textColor="#fff"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:textSize="14sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/cedittext"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#fff"
                android:text="Sign Up"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:background="@drawable/colored_edit_white"/>

        </LinearLayout>

    </ScrollView>




</LinearLayout>